--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ img#impresoraButton {
   <!-- Botón existente de WhatsApp -->
   
   <a href="#" id="whatsappButton">
-  <img class="boton" src="wsp.png" class="ImganelLogo" width= "60%" id "foto">
+  <img class="boton" src="wspp.png" class="ImganelLogo" width= "60%" id "foto">
   </a>
     </div>
   </div>
@@ -342,7 +342,7 @@ img#impresoraButton {
         <div id="thermal-pos">
         
         <div class="label">
-             <img class="boton" src="ticketdry.png" class="ImganelLogo" width= "60%" id "foto">
+             <img class="boton" src="logo.png" class="ImganelLogo" width= "60%" id "foto">
             <br/>
             <p class="info-tienda">
                 MAGDALENA
